# C-CPP-HW

./: README.md
data_structures/Deque/: CMakeLists.txt  const_iterator.cpp  deque.cpp  deque.h  iterator.cpp  main.cpp
data_structures/Vector/: CMakeLists.txt  main.cpp  vector.cpp  vector.h
task1/: CMakeLists.txt  main.c
task2/: main.c
task3/: CMakeLists.txt  rational.cpp  rational.h
task4/: CMakeLists.txt  format.cpp  format.h
task5/: CMakeLists.txt  format.cpp  format.h
task6/: CMakeLists.txt  lazy_string.cpp  lazy_string.h
task7/: CMakeLists.txt  lazy_string.h
